<resources>
    <string name="app_name" translatable="false">OMMS Connect</string>
    <string name="code">Code</string>
    <string name="ip" translatable="false">IP</string>
    <string name="go">LINK START</string>
    <string name="port">Port</string>
    <string name="login_hint">Please login to continue.</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome to OMMS Connect!</string>
    <string name="blank_line" />
    <string name="remember_server">Remember this server</string>
    <string name="remember_code">Remember this code</string>
    <string name="success">Connected.</string>
    <string name="fail">Cannot connect to server.</string>
    <string name="empty">Please fill in all those text boxes.</string>
    <string name="title_activity_session" translatable="false">OMMS Client Session</string>
    <string name="working">Connecting…</string>
    <string name="title_activity_session0" translatable="false">Session Activity</string>

    <string name="title_server">Server</string>
    <string name="title_whitelist">Whitelist</string>
    <string name="title_broadcast">Announcement</string>
    <string name="title_activity_whitelist_edit">Whitelist Edit</string>

    <string name="wdnmd">" "</string>
    <string name="player_name">Player Name</string>
    <string name="whitelist">Whitelist</string>
    <string name="todo">TODO</string>
    <string name="server">Server</string>
    <string name="title_activity_server_oscontrol">Server Control</string>

    <string name="meme">MEME</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_minecraft_server_control" translatable="false">Minecraft Server Control</string>
    <string name="whitelist_icon_desp">whitelist icon</string>
    <string name="announcement">Announcement</string>
    <string name="setting_button">setting button</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_util_command_edit">Util Command</string>
    <string name="label_export_data">Export data</string>
    <string name="import_data">Import Data</string>
    <string name="status_waiting">Waiting for Status</string>
    <string name="player_count">Player Count</string>
    <string name="player_list">Player List</string>
    <string name="fake_player_count" translatable="false">0/114514</string>
    <string name="unavailable">Unavailable</string>
    <string name="command">Command</string>
    <string name="memory">Memory</string>
    <string name="swap">Swap</string>
    <string name="load_average">Load Average:</string>

    <string name="label_controller_count">%d controllers added to this server.</string>
    <string name="label_whitelists_count">%d whitelists added to this server.</string>
    <string name="label_announcements_count">%d announcements added to this server.</string>
    <string name="label_server_os" translatable="false">Server OS</string>
    <string name="label_loading">Loading</string>
    <string name="label_wait">Please Wait…</string>

    <string name="error_unknown_exception">Unexpected Error occurred, more information: %s</string>

    <string name="error_controller_fetch_error">Cannot fetch controllers from server.\nCaused By: %s</string>
    <string name="error_system_info_fetch_error">Cannot fetch system info from server.\nCaused By: %s</string>

    <string name="error_permission_denied">Permission denied</string>
    <string name="error_unknown_error">An unexpected error occurred in server internal logic.</string>
    <string name="error_code_error">This permission code was not registered in server.</string>
    <string name="label_util_commands">Util Commands</string>
    <string name="hint_server_ip_port">Enter your server ip and port here</string>
    <string name="hint_permission_code">Enter your permission code here.</string>
    <string name="label_state_running">Running</string>
    <string name="label_state_stopped">Stopped</string>
    <string name="label_state_not_queryable">not_queryable</string>
    <string name="label_no_player">Nobody was here :(</string>
    <string name="error_exception">Encountered exception while %s:%s</string>
    <string name="label_whitelist_player_count">%s player was added to this whitelist</string>
    <string name="hint_whitelist_player_removed">Successfully to removed %s</string>
    <string name="hint_whitelist_remove_player_not_exist">Failed to remove %s \\n: Player Not Exist</string>
    <string name="hint_whitelist_remove_permission_denied">Failed to remove %s from whitelist: Permission Denied</string>
    <string name="error_controller_not_exist">Controller %s not exist, it might be removed from server.</string>
    <string name="error_server_controller_auth_error">Central server cannot auth with controller, make sure that controller exists or it`s name correct.</string>
    <string name="label_connect_console">Connect Console</string>
    <string name="label_disconnect_console">Disconnect</string>
    <string name="hint_console_exists">[Console Already Started]</string>
    <string name="hint_console_not_exist">[Console Not Exist]</string>
    <string name="hint_console_stopped">[Console Disconnected]</string>
    <string name="label_console_auto_roll">Auto Roll to end when log prints</string>
    <string name="console">Console</string>
    <string name="general">General</string>
    <string name="text_size">Text Size</string>
    <string name="data">Data</string>
    <string name="title_activity_announcement_edit">AnnouncementEditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>