<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="icu.takeneko.omms.connect.server.ServerFragment"
        android:label="@string/title_server"
        tools:layout="@layout/fragment_server" />

    <fragment
        android:id="@+id/navigation_whitelist"
        android:name="icu.takeneko.omms.connect.whitelist.WhitelistFragment"
        android:label="@string/title_whitelist"
        tools:layout="@layout/fragment_whitelist" />

    <fragment
        android:id="@+id/announcement"
        android:name="icu.takeneko.omms.connect.announcement.AnnouncementFragment"
        android:label="@string/title_broadcast"
        tools:layout="@layout/fragment_announcement" />
</navigation>